--- a/src/locales/chk.json
+++ b/src/locales/chk.json
@@ -4,5 +4,8 @@
   },
   "screen_titles": {
     "home": "Nepoputan"
+  },
+  "settings": {
+    "delete_confirmation_header": "Fokun pun ina?"
   }
 }
