--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -237,13 +237,17 @@
     "welcome_image_label": "Απεικόνιση ατόμων με μάσκες, συνδεδεμένες σαν κόμβους σε ένα δίκτυο."
   },
   "screen_titles": {
+    "bluetooth": "Bluetooth",
     "callback": "Αίτημα επιστροφής κλήσης",
     "debug": "Εντοπισμός σφαλμάτων",
     "exposure_history": "Ιστορικό Εκθέσεων",
     "exposures": "Εκθέσεις",
     "home": "Αρχική",
     "how_the_app_works": "Πώς λειτουργεί η εφαρμογή",
-    "legal": "Νομοθεσία"
+    "legal": "Νομοθεσία",
+    "location": "Τοποθεσία",
+    "protect_privacy": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
+    "select_language": "Επιλογή γλώσσας"
   },
   "self_assessment": {
     "age_range": {
@@ -284,6 +288,7 @@
       "dont_use_public_transport": "Μην χρησιμοποιείτε τα μέσα μαζικής μεταφοράς ή την από κοινού μεταφορά.",
       "drink_water": "Πίνετε άφθονο νερό και άλλα διαυγή υγρά για να αποφύγετε την απώλεια υγρών (αφυδάτωση).",
       "feeling_fine": "Χαιρόμαστε που αισθάνεστε καλά. Παρακολουθείτε τα συμπτώματά σας και μείνετε σπίτι.",
+      "find_a_test_center_nearby": "Εύρεση κέντρου ελέγχων κοντά μου",
       "find_telehealth": "Βρείτε υπηρεσίες τηλεϊατρικής",
       "follow_cdc_guidance": "Εάν εμφανίσετε συμπτώματα, ακολουθήστε τις οδηγίες CDC.",
       "if_symptoms_develop": "Εάν εμφανίσετε οποιοδήποτε από αυτά τα συμπτώματα ή εάν αρχίσετε να αισθάνεστε χειρότερα, καλέστε τον παροχέα υγειονομικής περίθαλψης, τη γραμμή παροχής συμβουλών κλινικών ιατρών ή τον πάροχο τηλεϊατρικής.",
@@ -331,6 +336,7 @@
     }
   },
   "settings": {
+    "delete_confirmation_header": "Είστε σίγουρος/η;",
     "here": "εδώ",
     "i_understand_and_consent": "Κατανοώ και συναινώ",
     "not_sharing_anonymized_data": "Χωρίς κοινή χρήση ανώνυμων δεδομένων",
