--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,7 +66,7 @@
     "consent_button_title": "I Understand and Consent",
     "consent_subheader_1": "Why should I share?",
     "consent_subheader_2": "How does it work?",
-    "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
+    "enable_exposure_notifications_body": "You must enable exposure notifications to report a positive test result.",
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
       "invalid_code": "Try a different code",
@@ -159,7 +159,7 @@
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
-    "check_if_your_symptoms": "Enter your symtpoms and get an instant recommendation on how to stay safe.",
+    "check_if_your_symptoms": "Enter your symptoms and get an instant recommendation on how to stay safe.",
     "did_you_test_positive": "Did you test positive for COVID-19?",
     "feeling_sick": "Feeling sick?",
     "fix": "Fix issues with {{technology}}",
@@ -357,14 +357,14 @@
     },
     "underlying_conditions": {
       "blood_disorder": "Blood disorder, such as sickle cell disease or thalassemia",
-      "cerebrovascular_disease": "Cerebrovascular disease or nerological condition, such as stroke or dementia",
+      "cerebrovascular_disease": "Cerebrovascular disease or neurological condition, such as stroke or dementia",
       "diabetes": "Diabetes",
       "do_you_have": "Do you have any of the following conditions?",
       "heart_condition": "Serious heart condition, such as heart failure, coronary artery disease, or cardiomyopathy",
       "high_blood_pressure": "High blood pressure",
       "kidney_disease": "Chronic kidney disease",
       "liver_disease": "Liver disease",
-      "lung_disease": "Chronic lung disease, such as moderate to sever asthma, COPD, cystic fibrosis, or pumonary fibrosis",
+      "lung_disease": "Chronic lung disease, such as moderate to sever asthma, COPD, cystic fibrosis, or pulmonary fibrosis",
       "obesity": "Obesity",
       "pregnancy": "Pregnancy",
       "select_all_or_none": "Select all that apply (or none)",
@@ -378,7 +378,7 @@
     "not_sharing_anonymized_data": "Not sharing anonymized data",
     "please_view_privacy_policy": "Please view their privacy policy",
     "share_anonymized_data": "Share Anonymized Data",
-    "share_anonymized_data_disclaimer": "By proceeding, you agree to share anonymized answers to screening quesitons with the {{healthAuthorityName}}",
+    "share_anonymized_data_disclaimer": "By proceeding, you agree to share anonymized answers to screening questions with the {{healthAuthorityName}}",
     "share_anonymized_data_para": "Your anonymous data helps the {{healthAuthorityName}} Commission analyze, track, and contain the spread of COVID-19. Your data will be aggregated with data from other users who choose to share.\n\nYour data contains your survey responses and zipcode, but no additional or personally-identifying information.\n\n The {{healthAuthorityName}} will retain your anonymous data for a specific period of time.",
     "sharing_anonymized_data": "Sharing anonymized data",
     "stop_sharing_data": "Stop Sharing Data",
