--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -31,6 +31,13 @@
     "start": "시작",
     "submit": "제출"
   },
+  "covid_data": {
+    "down_from_last_week": "지난 주 대비 감소",
+    "error_getting_data": "죄송합니다. {{location}} 대한 신규 확진자 데이터를 가져올 수 없습니다.",
+    "new_cases": "신규 확진자",
+    "see_more": "더 보기",
+    "up_from_last_week": "지난 주 대비 증가"
+  },
   "errors": {
     "description": "오류가 발생했습니다. 앱을 새로 고침하세요.",
     "reload": "새로 고침",
@@ -226,21 +233,44 @@
     "welcome_image_label": "네트워크의 연결된 노드처럼 마스크를 착용한 사람들의 그림."
   },
   "screen_titles": {
+    "bluetooth": "블루투스",
     "callback": "전화 회신 요청",
     "debug": "디버그",
     "exposure_history": "노출 이력",
     "exposures": "노출",
     "home": "집",
     "how_the_app_works": "어떻게 앱이 작동하나요?",
-    "legal": "법률"
+    "legal": "법률",
+    "location": "위치",
+    "protect_privacy": "개인 정보를 보호하는 방법",
+    "select_language": "언어 선택"
   },
   "self_assessment": {
     "general_symptoms": {
       "other": "그 외 증상"
     },
+    "guidance": {
+      "find_a_test_center_nearby": "인근 코로나19 검사소 찾기"
+    },
     "how_are_you_feeling": {
       "good": "좋습니다.",
       "not_well": "좋지 않습니다."
+    },
+    "intro": {
+      "if_this_is": "긴급상황인 경우 {{emergencyPhoneNumber}}로 전화하십시오."
+    },
+    "underlying_conditions": {
+      "diabetes": "당뇨병",
+      "do_you_have": "다음과 같은 증상이 있습니까?",
+      "heart_condition": "심부전, 관상 동맥 질환 또는 심근 병증과 같은 심각한 (심장) 증상",
+      "high_blood_pressure": "고혈압",
+      "kidney_disease": "만성 신장 질환",
+      "liver_disease": "간 질환",
+      "obesity": "비만",
+      "pregnancy": "임신",
+      "select_all_or_none": "해당하는 항목 모두 선택 (또는 해당하는 항목 없음)",
+      "smoking": "흡연",
+      "weakened_immune_system": "면역 체계가 약화되거나 면역 억제를 유발할 수있는 약물 복용"
     }
   },
   "settings": {
