--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,8 @@
     "skip": "Skip",
     "something_went_wrong": "Something went wrong",
     "start": "Start",
-    "submit": "Submit"
+    "submit": "Submit",
+    "success": "Success"
   },
   "covid_data": {
     "cases_today": "Cases today",
@@ -92,8 +93,6 @@
   },
   "exposure_history": {
     "check_for_exposures": "Check for exposures",
-    "check_successful": "Successfully checked for exposures",
-    "check_error": "There was a problem checking for exposures",
     "exposure_detail": {
       "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
