--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -167,7 +167,7 @@
     "exposure_history": "노출 이력",
     "home": "집",
     "more_info": "더 많은 정보",
-    "symptom_checker": "증상 검사기"
+    "symptom_history": "증상 검사기"
   },
   "onboarding": {
     "activation_header_title": "앱 설정",
@@ -281,7 +281,7 @@
     "share_anonymized_data_disclaimer": "계속 진행하면 {{healthAuthorityName}}의 검사 질의에 익명의 답변을 공유하는데 동의합니다.",
     "share_anonymized_data_para": "귀하의 익명 데이터는 {{healthAuthorityName}}이 코로나19의 확산을 분석, 추적 및 방지하는데 도움이 됩니다. 데이터 공유에 동의한 다른 사용자로부터 당신의 데이터가 공개될 것입니다.\n\n데이터는 설문 조사 응답과 우편 번호를 포함하지만 추가 정보나 개인 식별 정보는 포함하지 않습니다.\n\n{{healthAuthorityName}}은 일정 기간 동안 당신의 익명 데이터를 보관할 것입니다."
   },
-  "symptom_checker": {
+  "symptom_history": {
     "symptoms_saved": "증상이 저장되었습니다!",
     "what_symptoms": "어떤 증상이 있습니까?"
   },
