--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,7 @@
     "success": "Success"
   },
   "covid_data": {
+    "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "cases_today": "Cases today",
     "covid_data": "COVID Data",
     "covid_stats_in": "COVID Stats in {{location}}",
@@ -43,7 +44,6 @@
     "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
     "new_cases": "New Cases",
-    "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "see_more": "See more",
     "total_cases": "Total cases",
     "total_deaths": "Total deaths",
@@ -385,10 +385,12 @@
     "you_are_sharing_data": "You are sharing anonymized data"
   },
   "symptom_history": {
+    "did_not_feel_well": "You did not feel well",
     "errors": {
       "updating_symptoms": "Sorry, we could not update your symptoms"
     },
-    "no_data": "No data",
+    "felt_well": "You felt well",
+    "no_entry": "No entry",
     "no_symptoms": "No symptoms",
     "symptom_history": "Symptom History",
     "to_protect_your_privacy": "To protect your privacy, entries are stored on your device and deleted automatically after {{days}} days."
